<resources>
    <string name="app_name">FeelsBook</string>
    <string name="comment">Comment</string>
    <string name="new_emotion">New Emotion</string>
    <string name="add_emotion">Add Emotion</string>
    <string name="love">love</string>
    <string name="joy">joy</string>
    <string name="surprise">surprise</string>
    <string name="anger">anger</string>
    <string name="sadness">sadness</string>
    <string name="fear">fear</string>
    <string name="date">Date</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="emotional_statistics">Emotional Statistics</string>
    <string name="anger_count">Anger Count</string>
    <string name="emotional_history">Emotional History</string>
    <string name="title_activity_details_and_edit_emotion_activity">
        details_and_edit_emotion_activity
    </string>
    <string name="title_activity_view_emotion_detail_and_edit_emotion">
        ViewEmotionDetailAndEditEmotionActivity
    </string>
    <string name="title_activity_emotion">EmotionActivity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
